test/fail/if-mismatch.rnp
if true { 1 } else { true }
---
TypeError: consequent returns number but alternative returns boolean
fail/if-mismatch.rnp:1:1
if true { 1 } else { true }
^^^^^^^^^^^^^^^^^^^^^^^^^^^
